# GEL

./: CMakeLists.txt  GELConfig.cmake.in  GELUse.cmake  LICENSE  README  README.md  test-bundle-Info.plist
GEL/: GEL-Info.plist  GEL-Prefix.pch
GEL.xcodeproj/: jab.mode1  jab.pbxuser  project.pbxproj
MeshEdit/: AppDelegate.h  AppDelegate.m  MeshEdit-Info.plist  MeshEdit-Prefix.pch  deformdisc.x3d
MeshEdit/en.lproj/: MainMenu.xib
apps/MeshDistance/: CMakeLists.txt  meshdist.cpp
apps/MeshEdit/: CMakeLists.txt  CSCMatrixBuilder.h  VisObj.cpp  VisObj.h  harmonics.cpp  harmonics.h  meshedit.cpp  polarize.cpp  polarize.h
apps/OBJViewer/: CMakeLists.txt  objview.cpp  objviewer.cpp
apps/Pathtracer/: CMakeLists.txt  camera.h  core.h  luminaire.h  pathtracer.cpp  scene.cpp
apps/Raytracer/: CMakeLists.txt  Camera.h  raytrace.cpp
cmake/modules/: .FindLapack.cmake.swp
doc/: intro.tex
lib/: .placeholder
src/CGLA/: CGLA.h
src/GLGraphics/: Console.cpp  Console.h  IDBufferWireFrameRenderer.cpp  ManifoldRenderer.cpp  ManifoldRenderer.h  draw.cpp  draw.h
src/Geometry/: TrilinFilter.cpp  build_bbtree.cpp  save_raw.h
src/HMesh/: AttributeVector.h  ItemID.h  Iterators.h  Manifold.cpp  Manifold.h  Walker.h  cleanup.cpp  cleanup.h  curvature.cpp  curvature.h  dual.cpp  flatten.cpp  mesh_optimization.cpp  mesh_optimization.h  obj_load.cpp  obj_save.cpp  quadric_simplify.cpp  refine_edges.cpp  smooth.cpp  smooth.h  subdivision.cpp  subdivision.h  x3d_load.cpp
src/LinAlg/: LapackFunc.h  LinAlgIO.h
test/CGLA-covariance/: CMakeLists.txt  covariance_test.cpp
test/CGLA-mat/: CMakeLists.txt  mat_test.cpp
test/CGLA-ogl/: CMakeLists.txt  ogl_test.cpp
test/CGLA-simple/: CMakeLists.txt  simple_test.cpp
test/CGLA-vec/: CMakeLists.txt  vec_test.cpp
test/GLGraphics-console/: CMakeLists.txt  console_test.cpp
test/Geometry-kdtree/: CMakeLists.txt  kdtree-test.cpp
test/LinAlg-eigensolver/: CMakeLists.txt  eigensolvertest.cpp
test/LinAlg-leastsq/: CMakeLists.txt  leastsq-test.cpp
test/Util-resman/: CMakeLists.txt  resman-test.cpp
