ADD_EXECUTABLE(OBJViewer
	objview.cpp
)

set(OBJVIEWER_RELEASE ${LIBS_GLUT} ${LIBS_GLEW})
set(OBJVIEWER_DEBUG ${LIBS_GLUTD} ${LIBS_GLEWD})
  
foreach(RELEASE_LIB ${OBJVIEWER_RELEASE})
	target_link_libraries(OBJViewer optimized ${RELEASE_LIB})
endforeach(RELEASE_LIB)
foreach(DEBUG_LIB ${OBJVIEWER_DEBUG})
	target_link_libraries(OBJViewer debug ${DEBUG_LIB})
endforeach(DEBUG_LIB)

SET_TARGET_PROPERTIES(OBJViewer PROPERTIES XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD c++0x)
SET_TARGET_PROPERTIES(OBJViewer PROPERTIES XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY libc++)

TARGET_LINK_LIBRARIES(OBJViewer
	GEL
)
