find_package(OpenGL REQUIRED)

INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})

ADD_EXECUTABLE(GLGraphics-console
  console_test.cpp
  )

SET_TARGET_PROPERTIES(GLGraphics-console PROPERTIES XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD c++0x)
SET_TARGET_PROPERTIES(GLGraphics-console PROPERTIES XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY libc++)


TARGET_LINK_LIBRARIES(GLGraphics-console
  ${OPENGL_LIBRARIES} ${GLUT_glut_LIBRARY} GEL
  )
