ADD_EXECUTABLE(LinAlg-eigensolver
  eigensolvertest.cpp
  )

SET_TARGET_PROPERTIES(LinAlg-eigensolver PROPERTIES XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD c++0x)
SET_TARGET_PROPERTIES(LinAlg-eigensolver PROPERTIES XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY libc++)

TARGET_LINK_LIBRARIES(LinAlg-eigensolver
  GEL
  )
